# lib-wasm-pack

./: Cargo.toml  readme.md
src/: lib.rs
src/wasm-pack-v0.12.1-x86_64-pc-windows-msvc/: LICENSE-MIT  README.md
test-crate/: Cargo.toml  LICENSE_MIT
test-crate/src/: lib.rs
